# lvc

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: fix-paths.cmake  in-source-guard.cmake  install-rules.cmake  llcConfig.cmake  lvcConfig.cmake  variables.cmake
include/llc/: Compiler.h  ErrorHandling.h  MathExtras.h  MemAlloc.h  SmallVector.h  iterator_range.h  llc.h  type_traits.h
include/lvc/: Compiler.h  ErrorHandling.h  MathExtras.h  MemAlloc.h  SmallVector.h  iterator_range.h  lvc.h  type_traits.h
include/lvc/ADT/: APFixedPoint.h  APFloat.h  APInt.h  APSInt.h  AllocatorList.h  Any.h  ArrayRef.h  BitVector.h  Bitfields.h  BitmaskEnum.h  BreadthFirstIterator.h  CachedHashString.h  CoalescingBitVector.h  DAGDeltaAlgorithm.h  DeltaAlgorithm.h  DenseMap.h  DenseMapInfo.h  DenseSet.h  DepthFirstIterator.h  DirectedGraph.h  EnumeratedArray.h  EpochTracker.h  EquivalenceClasses.h  FloatingPointMode.h  FoldingSet.h  FunctionExtras.h  GraphTraits.h  Hashing.h  ImmutableList.h  ImmutableMap.h  ImmutableSet.h  IndexedMap.h  IntEqClasses.h  IntervalMap.h  IntrusiveRefCntPtr.h  MapVector.h  None.h  Optional.h  PackedVector.h  PointerEmbeddedInt.h  (+45 more)
include/lvc/Config/: AsmParsers.def  AsmPrinters.def  Disassemblers.def  Targets.def  abi-breaking.h  config.h  llvm-config.h
include/lvc/Demangle/: Demangle.h  DemangleConfig.h  ItaniumDemangle.h  MicrosoftDemangle.h  MicrosoftDemangleNodes.h  StringView.h  Utility.h
include/lvc/IR/: AbstractCallSite.h  Argument.h  AssemblyAnnotationWriter.h  Assumptions.h  Attributes.h  AutoUpgrade.h  BasicBlock.h  CFG.h  CMakeLists.txt  CallingConv.h  Comdat.h  Constant.h  ConstantFolder.h  ConstantRange.h  Constants.h  DIBuilder.h  DataLayout.h  DebugInfo.h  DebugInfoMetadata.h  DebugLoc.h  DerivedTypes.h  DerivedUser.h  DiagnosticHandler.h  DiagnosticInfo.h  DiagnosticPrinter.h  Dominators.h  FPEnv.h  FixedMetadataKinds.def  FixedPointBuilder.h  Function.h  GVMaterializer.h  GetElementPtrTypeIterator.h  GlobalAlias.h  GlobalIFunc.h  GlobalIndirectSymbol.h  GlobalObject.h  GlobalValue.h  GlobalVariable.h  IRBuilder.h  IRBuilderFolder.h  (+53 more)
include/lvc/Support/: AArch64TargetParser.h  AMDGPUMetadata.h  AMDHSAKernelDescriptor.h  ARMAttributeParser.h  ARMBuildAttributes.h  ARMEHABI.h  ARMTargetParser.h  ARMWinEH.h  AlignOf.h  Alignment.h  Allocator.h  AllocatorBase.h  ArrayRecycler.h  Atomic.h  AtomicOrdering.h  Automaton.h  Base64.h  BinaryByteStream.h  BinaryItemStream.h  BinaryStream.h  BinaryStreamArray.h  BinaryStreamError.h  BinaryStreamReader.h  BinaryStreamRef.h  BinaryStreamWriter.h  BlockFrequency.h  BranchProbability.h  BuryPointer.h  CBindingWrapping.h  CFGDiff.h  CFGUpdate.h  CMakeLists.txt  COM.h  CRC.h  CachePruning.h  Capacity.h  Casting.h  CheckedArithmetic.h  Chrono.h  CodeGen.h  (+134 more)
include/lvc/Support/FileSystem/: UniqueID.h
include/lvc/Support/Solaris/sys/: regset.h
include/lvc/Support/Windows/: WindowsSupport.h
include/lvc/Testing/Support/: Annotations.h  Error.h  SupportHelpers.h
source/: ErrorHandling.cpp  SmallVector.cpp
source/Demangle/: CMakeLists.txt  Demangle.cpp  ItaniumDemangle.cpp  MicrosoftDemangle.cpp  MicrosoftDemangleNodes.cpp
source/Support/: AArch64TargetParser.cpp.xxx  ABIBreak.cpp  AMDGPUMetadata.cpp.xxx  APFixedPoint.cpp  APFloat.cpp  APInt.cpp  APSInt.cpp  ARMAttributeParser.cpp  ARMBuildAttrs.cpp  ARMTargetParser.cpp  ARMWinEH.cpp  Allocator.cpp  Atomic.cpp  BinaryStreamError.cpp  BinaryStreamReader.cpp  BinaryStreamRef.cpp  BinaryStreamWriter.cpp  BlockFrequency.cpp  BranchProbability.cpp  BuryPointer.cpp  CMakeLists.txt  COM.cpp  CRC.cpp  CachePruning.cpp  Chrono.cpp  CodeGenCoverage.cpp  CommandLine.cpp  Compression.cpp  ConvertUTF.cpp  ConvertUTFWrapper.cpp  CrashRecoveryContext.cpp  DAGDeltaAlgorithm.cpp  DJB.cpp  DataExtractor.cpp  Debug.cpp  DebugCounter.cpp  DeltaAlgorithm.cpp  DynamicLibrary.cpp  ELFAttributeParser.cpp  ELFAttributes.cpp  (+102 more)
source/Support/Unix/: COM.inc  DynamicLibrary.inc  Host.inc  Memory.inc  Path.inc  Process.inc  Program.inc  Signals.inc  ThreadLocal.inc  Threading.inc  Unix.h  Watchdog.inc
source/Support/Windows/: COM.inc  DynamicLibrary.inc  Host.inc  Memory.inc  Path.inc  Process.inc  Program.inc  Signals.inc  ThreadLocal.inc  Threading.inc  Watchdog.inc
source/Testing/Support/: Annotations.cpp  CMakeLists.txt  Error.cpp  SupportHelpers.cpp
test/: CMakeLists.txt
test/source/: APFixedPointTest.cpp  APFloatTest.cpp  APIntTest.cpp  APSIntTest.cpp  AnyTest.cpp  ArrayRefTest.cpp  BitFieldsTest.cpp  BitVectorTest.cpp  BitmaskEnumTest.cpp  BreadthFirstIteratorTest.cpp  BumpPtrListTest.cpp  CMakeLists.txt  CoalescingBitVectorTest.cpp  DAGDeltaAlgorithmTest.cpp  DeltaAlgorithmTest.cpp  DenseMapTest.cpp  DenseSetTest.cpp  DepthFirstIteratorTest.cpp  DirectedGraphTest.cpp  EnumeratedArrayTest.cpp  EquivalenceClassesTest.cpp  FallibleIteratorTest.cpp.xxx  FloatingPointMode.cpp  FoldingSet.cpp  FunctionExtrasTest.cpp  FunctionRefTest.cpp  HashingTest.cpp  IListBaseTest.cpp  IListIteratorTest.cpp  IListNodeBaseTest.cpp  IListNodeTest.cpp  IListSentinelTest.cpp  IListTest.cpp  ImmutableListTest.cpp  ImmutableMapTest.cpp  ImmutableSetTest.cpp  IntEqClassesTest.cpp  IntervalMapTest.cpp  IntrusiveRefCntPtrTest.cpp  IteratorTest.cpp  (+37 more)
